--- a/writing/sections/methods.Rmd
+++ b/writing/sections/methods.Rmd
@@ -40,11 +40,11 @@ BBS contains abundances for all species along a route in each year, but does not
 
 Comparing trends across different currencies is a nontrivial statistical problem. Because different currencies vary widely in their units of measure (e.g. abundance in the hundreds of individuals; total biomass in the thousands of grams), it is challenging to interpret differences in magnitude of slope across different currencies. Transformation and scaling using common approaches (such as a square-root transformation, or rescaling each currency to a mean of 0 and a standard deviation of 1) destroys information about the degree of variability within each currency that is necessary in order to make comparisons *between* currencies for the same system. 
 
-Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, we used a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species (and therefore, in this context, size) composition of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then created simulated timeseries for biomass and energy use incorporating observed changes in community-wide abundance over time, but under a scenario of consistent species (and therefore size) composition over time. For each community, we characterized the timeseries-wide probability of an individual drawn at random from the community belonging to a particular species ($P(s_i)$) as each species' mean relative abundance taken across all timesteps: 
+Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, we used a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species (and therefore, in this context, size) composition of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then created simulated timeseries for biomass and energy use incorporating observed changes in community-wide abundance over time, but under a scenario of consistent species (and therefore approximate size) composition over time. For each community, we characterized the timeseries-wide probability of an individual drawn at random from the community belonging to a particular species ($P(s_i)$) as each species' mean relative abundance taken across all timesteps: 
 
 $P(s_i) = \frac{\sum_t^T{\frac{n_{i, t}}{N_t}}}{T}$
 
-where $n_{i, t}$ is the abundance of species $i$ in timestep $t$, $N_t$ is the total abundance of all species in timestep $t$, and $T$ is the total number of timesteps. For each timestep $t$, we randomly assigned species' identities to the observed number of individuals $N_t$ by drawing with replacement from a multinomial distribution with probabilities weighted according to $P(s)$ for all species. We then simulated body size measurements for individuals, and calculated total energy use and total biomass, following the same procedure as for the observed community. This characterizes the dynamics for size-based currencies expected if the species (and size) composition of the community does not change over time, but incorporating observed fluctuations in total abundance. We refer to these dynamics as "abundance-driven" dynamics. 
+where $n_{i, t}$ is the abundance of species $i$ in timestep $t$, $N_t$ is the total abundance of all species in timestep $t$, and $T$ is the total number of timesteps. For each timestep $t$, we randomly assigned species' identities to the total number of individuals of all species observed in that time step ($N_t$) by drawing with replacement from a multinomial distribution with probabilities weighted according to $P(s)$ for all species. We then simulated body size measurements for individuals, and calculated total energy use and total biomass, following the same procedure as for the observed community. This characterizes the dynamics for size-based currencies expected if the species (and size) composition of the community does not change over time, but incorporating observed fluctuations in total abundance. We refer to these dynamics as "abundance-driven" dynamics. 
 
 ## Long-term trends
 
@@ -65,16 +65,16 @@ Community dissimilarity metrics are most readily interpretable when making pairw
 
 We calculated three metrics to explore how changes in community composition and size structure translate into decoupling between abundance-driven and observed dynamics for biomass and energy use.  First, we evaluated the change in average community-wide body size, calculated as the log ratio of mean body size in the last five years relative to the mean body size in the first five years:
 
-$log(\frac{\bar{m}_{last5}}{\bar{m}_{first5}})$
+$ln(\frac{\bar{m}_{last5}}{\bar{m}_{first5}})$
 
-where $\bar{m}_{last5}$ is the mean body size of all individuals observed in the last 5 timesteps. Large changes in average body size are, by definition, expected to translate into decoupling between observed and abundance-driven dynamics.
+where $\bar{m}_{first5}$ and $\bar{m}_{last5}$ is the mean body size of all individuals observed in the first and last 5 years, respectively. Large changes in average body size are, by definition, expected to translate into decoupling between observed and abundance-driven dynamics.
 
-Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD using a measure derived from an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). We characterized each "begin" or "end" ISD as a smooth probability density function by fitting a Gaussian mixture model (with up to 15 Gaussians; following @thibault2011) to the raw distribution of body masses, and extracting the fitted probability density at 1000 evaluation points corresponding to body masses extending beyond the range of body masses present in this dataset (specifically, from 0 to 15 kilograms; mean body masses in this dataset range from 2.65 grams, for the Calliope hummingbird *Selasphorus calliope*, to 8.45 kg, for the California condor *Gymnogyps californianus*). We rescaled each density function such that the total probability density summed to 1. To calculate the degree of turnover between two ISDs, we calculated the area of overlap between the two density smooths as $\sum{\min(density1_i, density2_i)}$ where $density1_i$ is the probability density for the first ISD at evaluation point $i$, and $density2_i$ is the density smooth for the second ISD at that evaluation point. We subtracted this quantity from 1 to obtain a measure of turnover between two ISDs.
+Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD using a measure inspired by an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). We characterized each "begin" or "end" ISD as a smooth probability density function by fitting a Gaussian mixture model (with up to 15 Gaussians; following @thibault2011) to the raw distribution of body masses, and extracting the fitted probability density at 1000 evaluation points corresponding to body masses extending beyond the range of body masses present in this dataset (specifically, from 0 to 15 kilograms; mean body masses in this dataset range from 2.65 grams, for the Calliope hummingbird *Selasphorus calliope*, to 8.45 kg, for the California condor *Gymnogyps californianus*). We rescaled each density function such that the total probability density summed to 1. To calculate the degree of turnover between two ISDs, we calculated the area of overlap between the two density smooths as $\sum{\min(density1_i, density2_i)}$ where $density1_i$ is the probability density for the first ISD at evaluation point $i$, and $density2_i$ is the density smooth for the second ISD at that evaluation point. We subtracted this quantity from 1 to obtain a measure of turnover between two ISDs.
 
 
 To evaluate turnover in species composition between the five-year time periods, we calculated Bray-Curtis dissimilarity between the two communities using the R package `vegan` [@pinheiro2020]. 
 
-We tested whether routes whose dynamics were best-described using different syndromes of change (no trend, couple trends, or decoupled trends) differed in 1) the magnitude of change in mean body size; 2) turnover in the ISD over time; or 3) species compositional turnover over time. For change in mean body size, we fit an ordinary linear model of the form `abs(log ratio (mean body size)) ~ best fitting model type`. We used the absolute log ratio so as to focus on the magnitude, rather than the direction, of change in body size. We compared this model to an intercept-only null model of the form `abs(log ratio(mean body size)) ~ 1`. Because our metrics for turnover in the ISD and species composition are bounded from 0-1, we analyzed these metrics using binomial generalized linear models of the form `ISD turnover ~ best fitting model type` and `dissimilarity ~ best fitting model type`, and again compared these models to intercept-only null models. In instances where the model fit with `best fitting model type` outperformed the intercept-only model, we calculated model estimates and contrasts using the R package `emmeans` [@lenth2021]. 
+We tested whether routes whose dynamics were best-described using different syndromes of change (no trend, couple trends, or decoupled trends) differed in 1) the magnitude of change in mean body size; 2) turnover in the ISD over time; or 3) species compositional turnover over time. For change in mean body size, we fit an ordinary linear model of the form `abs(log ratio (mean body size)) ~ best fitting model type`. We used the absolute log ratio so as to focus on the magnitude, rather than the direction, of change in body size (see also @supp2014a for the use of the absolute log ratio to examine the magnitudes of differences between values). We compared this model to an intercept-only null model of the form `abs(log ratio(mean body size)) ~ 1`. Because our metrics for turnover in the ISD and species composition are bounded from 0-1, we analyzed these metrics using binomial generalized linear models of the form `ISD turnover ~ best fitting model type` and `dissimilarity ~ best fitting model type`, and again compared these models to intercept-only null models. In instances where the model fit with `best fitting model type` outperformed the intercept-only model, we calculated model estimates and contrasts using the R package `emmeans` [@lenth2021]. 
 
 
 \newpage
