more methods details

--- a/writing/sections/methods.Rmd
+++ b/writing/sections/methods.Rmd
@@ -1,8 +1,8 @@
 ---
 output:
-  # word_document:
-  #   reference_docx: default_gdoc.docx
-  #   df_print: kable
+  word_document:
+    reference_docx: default_gdoc.docx
+    df_print: kable
   # html_document:
   #   df_print: kable
   pdf_document: 
@@ -38,9 +38,9 @@ BBS contains abundances for all species along a route in each year, but does not
 
 ## Comparing abundance- and size- based currencies
 
-Comparing trends across different currencies is a nontrivial statistical problem. Because different currencies vary widely in their units of measure (e.g. abundance in the hundreds of individuals; total biomass in the thousands of grams), it is challenging to interpret differences in magnitude of slope across different currencies. Transformation and scaling using common approaches (such as a square-root transformation, or rescaling each currency to a mean of 0 and a standard deviation of 1) destroys information about the degree of variability within each currency that is necessary in order to make comparisons *between* currencies for the same system. 
+Comparing trends across different currencies is a nontrivial statistical problem. Because different currencies vary widely in their units of measure (e.g. abundance in the hundreds of individuals; total biomass in the thousands of grams) and , it is challenging to interpret differences in magnitude of slope across different currencies. Transformation and scaling using common approaches (such as a square-root transformation, or rescaling each currency to a mean of 0 and a standard deviation of 1) destroys information about the degree of variability within each currency that is necessary in order to make comparisons *between* currencies for the same timeseries. 
 
-Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, we used a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species (and therefore, in this context, size) composition of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then created simulated timeseries for biomass and energy use incorporating observed changes in community-wide abundance over time, but under a scenario of consistent species (and therefore approximate size) composition over time. For each community, we characterized the timeseries-wide probability of an individual drawn at random from the community belonging to a particular species ($P(s_i)$) as each species' mean relative abundance taken across all timesteps: 
+Rather than attempting to compare slopes across currencies or to transform different currencies to a common scale, we used a simple null model to compare the observed dynamics for biomass and energy use to the dynamics that would occur in a scenario in which the species composition (and therefore, in this context, size structure) of the community was consistent throughout the timeseries, but in which total abundance varied over time consistent with the observed dynamics. For each route, we characterized the "observed" timeseries of total biomass and total energy use by simulating size measurements for all individuals observed in each time step and summing across individuals, using the method described above. We then simulated timeseries for "abundance-driven" dynamics of biomass and energy use incorporating observed changes in community-wide abundance over time, but under a scenario of consistent species (and therefore approximate size) composition over time. For each community, we characterized the timeseries-wide probability of an individual drawn at random from the community belonging to a particular species ($P(s_i)$) as each species' mean relative abundance taken across all timesteps: 
 
 $P(s_i) = \frac{\sum_t^T{\frac{n_{i, t}}{N_t}}}{T}$
 
@@ -65,11 +65,11 @@ Community dissimilarity metrics are most readily interpretable when making pairw
 
 We calculated three metrics to explore how changes in community composition and size structure translate into decoupling between abundance-driven and observed dynamics for biomass and energy use.  First, we evaluated the change in average community-wide body size, calculated as the log ratio of mean body size in the last five years relative to the mean body size in the first five years:
 
-$ln(\frac{\bar{m}_{last5}}{\bar{m}_{first5}})$
+$\ln(\frac{\bar{m}_{last5}}{\bar{m}_{first5}})$
 
 where $\bar{m}_{first5}$ and $\bar{m}_{last5}$ is the mean body size of all individuals observed in the first and last 5 years, respectively. Large changes in average body size are, by definition, expected to translate into decoupling between observed and abundance-driven dynamics.
 
-Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD using a measure inspired by an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). We characterized each "begin" or "end" ISD as a smooth probability density function by fitting a Gaussian mixture model (with up to 15 Gaussians; following @thibault2011) to the raw distribution of body masses, and extracting the fitted probability density at 1000 evaluation points corresponding to body masses extending beyond the range of body masses present in this dataset (specifically, from 0 to 15 kilograms; mean body masses in this dataset range from 2.65 grams, for the Calliope hummingbird *Selasphorus calliope*, to 8.45 kg, for the California condor *Gymnogyps californianus*). We rescaled each density function such that the total probability density summed to 1. To calculate the degree of turnover between two ISDs, we calculated the area of overlap between the two density smooths as $\sum{\min(density1_i, density2_i)}$ where $density1_i$ is the probability density for the first ISD at evaluation point $i$, and $density2_i$ is the density smooth for the second ISD at that evaluation point. We subtracted this quantity from 1 to obtain a measure of turnover between two ISDs.
+Second, we calculated measures of turnover in the size structure and in species composition. We calculated turnover in the ISD using a measure inspired by an overlap measure that has previously been applied to species body size distributions in mammalian communities (@read2018). We characterized each "begin" or "end" ISD as a smooth probability density function by fitting a Gaussian mixture model (with up to 15 Gaussians; following @thibault2011) to the raw distribution of body masses, and extracting the fitted probability density at 1000 evaluation points corresponding to body masses extending beyond the range of body masses present in this dataset (specifically, from 0 to 15 kilograms; mean body masses in this dataset range from 2.65 grams, for the Calliope hummingbird *Selasphorus calliope*, to 8.45 kg, for the California condor *Gymnogyps californianus*). We rescaled each density function such that the total probability density summed to 1. To calculate the degree of turnover between two ISDs, we calculated the area of overlap between the two density smooths as $\sum{\min(density1_i, density2_i)}$ where $density1_i$ is the probability density from the density smooth for the first ISD at evaluation point $i$, and $density2_i$ is the probability density from the density smooth for the second ISD at that evaluation point. We subtracted this quantity from 1 to obtain a measure of turnover between two ISDs.
 
 
 To evaluate turnover in species composition between the five-year time periods, we calculated Bray-Curtis dissimilarity between the two communities using the R package `vegan` [@pinheiro2020]. 
