--- a/writing/sections/discussion.Rmd
+++ b/writing/sections/discussion.Rmd
@@ -14,29 +14,27 @@ bibliography: refs.bib
 
 # Discussion
 
-## Decoupling of abundance, biomass, and energy use
+## Abundance, biomass, and energy use are nonequivalent currencies
 
-Although the dynamics of size- and abundance- based currencies are intrinsically related to each other, decoupling in these dynamics for a substantial minority of communities results in qualitatively different continent-wide patterns in the long-term trends of abundance, biomass, and energy use. Despite a strong signal of declines in overall abundance across the routes in the BBS, the long-term trends in biomass are evenly divided between increases and decreases. 
+Simultaneously examining multiple currencies of community-level abundance revealed qualitatively different continent-wide patterns in the long-term trends for abundance in terms of individuals, biomass, and energy use. While long-term trends in individual abundance were dominated by decreases, long-term trends in biomass were evenly split between increases and decreases, and trends in energy use were again dominated by declines (Figure 2). These different currencies, though intrinsically linked,  describe nonequivalent dimensions of community function and reflect different classes of structuring processes [@morlon2009]. Abundance, in terms of individuals, is most directly linked to species-level population dynamics of the type often considered in classic, particularly theoretical, approaches to studying competition, compensation, and coexistence  (e.g. @hubbell2001; @chesson2000). Biomass most directly reflects the productivity of a community and its potential contributions to materials fluxes in the broader ecosystem context, whereas energy use - by taking into account the metabolic inefficiencies of organisms of different body size  - characterizes the total *resource use* of a community and may come the closest to capturing signals of bottom-up constraints, "Red Queen" effects, or zero-sum competitive dynamics [@morlon2009; @ernest2009; @white2004; @vanvalen1973; @ernest2008]. Our results underscore that, while trends in abundance, biomass, and energy use naturally co-vary to some extent, shifts in the  community size structure can and do produce qualitatively different trends for these different currencies. These may reflect contrasting long-term changes in different types of community processes - for example, shifts in habitat structure that affect the optimal body sizes for organisms in a system, but do not result in overall changes in resource availability (e.g. @white2004). Moreover, extrapolating the long-term trend from one currency to another may elide underlying changes in the community that complicate these dynamics. To appropriately monitor different dimensions of biodiversity change, it is therefore important to focus on the specific currency most closely aligned with the types of processes and dynamics - e.g. population fluctuations, resource limitation, or materials fluxes - of interest in a particular context. 
 
-First, this illustrates that we should extrapolate between currencies with some care. They are intrinsically linked, but changes in size structure can cause scaling relationships between each of the currencies to break down. Shifts in mean per capita body size decouple biomass from abundance, and different specific size compositions will result in different community-wide scaling between energy use and biomass. 
+##  For North American breeding birds, biomass has declined less than abundance or energy use
 
-For routes with a decoupling in the long-term trends of biomass, energy use, and abundance, this decoupling is indicative of a directional shift in the size structure of the community. In the case of BBS, the overwhelmingly most common scenario is of a decline in abundance, but a shift in the size structure favoring larger-bodied species and offsetting or even reversing this decline in abundance. This contrasts with general concerns about larger-bodied species being more vulnerable to declines in abundance or outright extinctions due to anthropogenic changes. However, it is consistent with previous findings from the BBS [@schipper2016]. Increases in body size may reflect forests in recovery across North America, or the contributions of relatively few, large-bodied species that may in fact benefit from recent ecological changes. 
+For communities with a decoupling in the long-term trends of biomass, energy use, and abundance, this decoupling is indicative of a directional shift in the size structure of the community. For the communities of breeding birds across North America considered here, the long-term trends in total biomass are often less negative than trends in total abundance or total energy use (Figure 3). This consistent (but not ubiquitous) signal corresponds to community-level increases in average body size that partially or completely buffer changes in total against declines in abundance. This contrasts with general, global concerns that larger-bodied species are more vulnerable to extinction and population declines than smaller ones [@smith2018; @young2016; @dirzo2014; @ref]. However, it is consistent with previous findings from the Breeding Bird Survey [@schipper2016]. Increases in body size may reflect forests in recovery across North America over this timespan [@schipper2016], or the contributions of relatively few, large-bodied species that may in fact benefit from recent ecological changes [@ref?]. The long-term trends for communities of different taxonomic groups, geographies, or temporal spans may show different effects related to different facets of global change and biodiversity responses. 
 
-## How changes in the ISD contribute to decoupling
+We note that these increases in body size do not generally appear great enough to decouple the long-term trends in *energy use* from total abundance (Figure 3). Energy use scales nonlinearly with body size with an exponent less than 1, which means that community-wide increases in mean body size result in smaller increases in total energy use than in total biomass. 
 
-While an overall decoupling of the long-term trends for biomass, abundance, and energy use is symptomatic of a pronounced shift in the size structure, the absence of such a decoupling does not imply that the size structure has remained unchanged over time. Rather, the amount of turnover in the size structure over time is comparable for routes that do and do not exhibit long-term decoupling. Importantly, these size shifts may *also* reflect significant functional changes to the community, and should not be ignored simply because they have no overall or consistent effect on the long-term temporal trends.
 
-Finally, we should acknowledge possibility that either random population dynamics, or systematic, but non-*size*-structured, dynamics, contribute to changes in both the size structure and in the relationship between biomass, energy use, and abundance over time. At a macroecological scale, null modeling approaches inspired by the study of functional and taxonomic beta diversity may help address this question [@swenson2011; @stegen2013]. However, these models are known to suffer from the "Narcissus effect" and to be highly sensitive to the information used to constrain the model, resulting in a high type-I error rate and reduced inferential power [@ulrich2017]. It may, therefore, be most informative to focus instead on the dynamics of particular systems and attempt to understand the interlinked dynamics of shifts in species composition, size structure, abundance, biomass, and energy use from a perspective grounded in empiricism and natural history. 
+## Complex relationships between compositional change and community-level properties
 
-## Extensions to capture nonlinear dynamics
+The decoupling between the long-term trends for biomass, abundance, and energy use demonstrated in many of the communities studied here is symptomatic of a directional shift in the size structure - in these instances, generally favoring larger bodied species. However, examining the community-wide dynamics of turnover in species composition and the overall size structure reveals that the relationship between changes in community structure and changes in the scaling between different currencies of community-wide abundance is considerably more nuanced than simple directional shifts in mean size.  Routes that exhibit a statistically detectable decoupling between total biomass and total abundance show large changes in average body size compared to routes for which biomass and abundance either change more nearly in concert with each other or do not show temporal trends (Figure 4). This aligns naturally with mathematical intuition given the intrinsic relationship between average body size, total abundance, and total biomass. However, these routes are *not* extraordinary in terms of their overall degree of temporal turnover in either the size structure or in species composition. Rather, the levels of turnover in overall community structure are comparable between routes that show decoupling between abundance and biomass, statistically indistinguishable trends, or no temporal trends in either currency (Figure 4). 
 
-While linear approximations can help identify strong directional trends, they have significant limitations for understanding more complex biodiversity dynamics. Long-term trends may mask changes in direction of a trend over time, and it is challenging to distinguish between low-variability, and highly variable, but not *temporally* structured, timeseries in macroecological-scale datasets. This is doubly true in the context of comparing multiple abundance currencies to each other: complex dynamics of the size structure, and therefore the scaling between size- and abundance- based currencies, may be inadequately described by linear approximations. 
+For many communities, therefore, there has been appreciable change in the species and size composition that simply does not manifest in a shift in the overall community-wide mean body size or mean metabolic rate sufficient to decouple the dynamics of biomass, abundance, and energy use. These changes may signal changes in functional composition equally important as the ones that manifest in directional shifts in community-wide average body size. For the complex, multimodal size distributions that are the norm for avian communities [@thibault2011], changes in the number and position of modes may be as important as changes in higher-level statistical moments such as the overall mean. At present, the field lacks the statistical tools and conceptual frameworks to quantify and interpret these nuanced changes, especially at the macroecological scale of the current study [@thibault2011; @yen2017]. However, this is an excellent opportunity for more system-specific work, informed by natural history knowledge and process-driven expectation, to characterize more nuanced changes in the size structure of specific communities and identify the underlying drivers of these changes. To facilitate these efforts in the context of the Breeding Bird Survey, the R package we have developed to characterize the individual size distributions for avian communities based on species' identities and/or mean body sizes is freely available for re-use and wider applications (*cite dissertation version here - I am working on a more general-use version to publish more widely, e.g. in JOSS, but not by March!*). 
 
-Again, a more system-specific perspective, combined with emerging statistical approaches, may  help move us towards a more nuanced understanding of the potential for nonlinear temporal dynamics. For example, generalized additive models (GAMS) present an emerging and promising tool set for exploring these more complex biodiversity dynamics. Generalized additive models can describe complex, nonlinear dynamics, and can be used to detect periods of time when the trajectories of multiple currencies decouple from each other. However, fitting GAMs for this application requires numerous decisions that depend on the specificities of a given dataset, and we lack conceptual frameworks for interpreting macroecological-scale aggregations of complex temporal dynamics. Efforts along these lines working with specific systems can help develop robust model fitting protocols and frameworks for interpretation that can eventually be applied to large-scale datasets such as the one presented here.
 
-## Conclusion
+# Conclusion
 
-This analysis demonstrates the usefulness and the limitations of a macroecological approach to studying community structure and function across levels of organization. In the first large-scale synthesis of the temporal dynamics of community size structure and function for terrestrial animals, we find that changes in species/size composition can and do drive qualitatively different long-term trajectories for size- and abundance- based currencies of function. This is indicative of widespread changes in community size structure that may reflect substantive changes in functional composition. Future, potentially smaller-scale, work will be instrumental in identifying the processes driving these shifts and characterizing more nuanced relationships between size and abundance over time in these systems. 
+This analysis demonstrates the current power, and limitations, of a data-driven macroecological perspective on the interrelated dynamics of community size structure and different dimensions of community-wide abundance for terrestrial animal communities. For breeding bird communities across North America, we find that changes in species and size composition produce qualitatively different aggregate patterns in the long-term trends of abundance, biomass, and energy use, highlighting the nuanced relationship between these related, but decidedly nonequivalent, currencies and reflecting widespread changes in community size structure that may signal substantive changes in functional composition. Simultaneously, the complex relationship between turnover in community species and size composition, and the scaling between different currencies of community-level abundance, highlights opportunities for synergies between recent computational and statistical advances, case studies grounded in empiricism and natural history, and future macroecological-scale synthesis to realize the full potential of this conceptual space. 
 
 \newpage
 # References
