--- a/writing/consolidated.Rmd
+++ b/writing/consolidated.Rmd
@@ -5,7 +5,7 @@ output:
   # html_document:
   #   df_print: kable
   word_document:
-    reference_docx: default_gdoc.docx
+    reference_docx: ecology_doc.docx
     df_print: kable
 csl: ecology.csl
 bibliography: refs.bib
